--- a/index.html
+++ b/index.html
@@ -190,7 +190,112 @@
                     <div class="project__subtitle">Лендинг</div>
                 </div>
             </div>
-                            <div class="btn"></div>
+
+            <div class="btn projects__btn"> Еще проекты</div>
+
+        </div>
+    </section>
+
+    <section class="about-us">
+        <div class="inner">
+            <div class="about-us__content">
+                <div class="about-us__detail">
+                    <div class="about-us__title">Почему выбирают нас?</div>
+                    <div class="about-us__text"> Компания «Евростудио» — это web-студия полного цикла в Новосибирске. Мы
+                        предлагаем своим клиентам комплексное развитие бизнеса в Интернете: дизайн и создание
+                        эффективных сайтов, автоматизация бизнес-процессов, продвижение, а также разработка программного
+                        обеспечения и веб-приложений. Наша цель — отлаженный, современный и <a class="link" href="">приносящий
+                            прибыль сайт</a>,
+                        приложение или ПО. <br>
+                        <br>
+                        Мы не создаем шаблонные решения, напротив, разрабатываем решение под задачи клиентов и их
+                        целевой аудитории. Наше основное преимущество — весь процесс развития сайта вы можете пройти в
+                        одном месте, без потери качества и сложного пути подбора и смены подрядчиков. Наши специалисты
+                        работают в едином офисном пространстве, и являются слаженной командой. Мы несем
+                        консолидированную ответственность за все этапы работ, можем обесепечить промоушен и дальнейшее
+                        развитие вашего проекта.
+                    </div>
+                </div>
+                <div class="about-us__detail">
+                    <div class="about-us__title">Работа в нашей компании</div>
+                    <div class="about-us__text"> Будем рады видеть среди коллег целеустремленных, ответственных, готовых
+                        к личностному и профессиональному росту людей. Предлагаем работу в дружном, слаженном
+                        коллективе, достойную оплату труда и полный социальный пакет. Мы не сторонники принудительных
+                        корпоративных активностей, в нашем коллективе уютно людям разного возраста, характера и
+                        мировоззрения. <br> <br>
+                        Наша команда состоит из разных специалистов. Информацию об условиях работы, требованиях к
+                        кандидатам и открытые вакансии можно посмотреть в разделе <a class="link" href="">Карьера</a>.
+                        <br> <br>
+                        Евростудио находится в чудесном зеленом месте в Академгородке, а наш новый эко-офис уж точно не
+                        оставит никого равнодушным.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="inner">
+            <div class="footer__sections">
+                <div class="footer__section">
+                    <div class="job-type">
+                        <div class="job-type__title">Дизайн</div>
+                        <ul class="job-type__links">
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Проектирование</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Дизайн сайтов</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Дизайн интерфейсов</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Корпоративный брендинг</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Посадочные страницы</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__section">
+                    <div class="job-type">
+                        <div class="job-type__title">Разработка</div>
+                        <ul class="job-type__links">
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Корпоративные сайты</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Интернет-магазины</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Информационные порталы</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Разработка веб-приложений</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Автоматизация бизнеса</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Мобильные приложения</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__section">
+                    <div class="job-type">
+                        <div class="job-type__title">Продвижение</div>
+                        <ul class="job-type__links">
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Аудиты и веб-аналитика</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Поисковое продвижение сайтов</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Продвижение по трафику</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Раскрутка в социальных сетях</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Контекстная реклама</a></li>
+                            <li class="job-type__link"><a href="" class="link link_decoration_arrow">Техническая поддержка</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__section">
+                    <div class="company">
+                        <div class="company__title">© ООО "ЕвроСтудио", 2002—2020</div>
+                        <div class="company__address">
+                            <a href="" class="link">Создание и разработка сайтов</a> <br>
+                            г. Новосибирск, ул. Гнесиных, д. 10/1,<br>оф. 1101<br>
+                            +7 (383) 207-56-07
+                        </div>
+                        <div class="company__rules">
+                            <a href="" class="link">Политика конфиденциальности</a> |<br>
+                            <a href="" class="link">Глоссарий</a> |
+                            <a href="" class="link">Отправить заявку</a> |<br>
+                            <a href="" class="link">Отзывы</a>
+                        </div>
+                        <div class="company__icons">
+                            <a href=""><div class="company__icon icon_social_vk"></div></a>
+                            <a href=""><div class="company__icon icon_social_instagram"></div></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
